--- a/.github/workflows/molt.yml
+++ b/.github/workflows/molt.yml
@@ -1,4 +1,10 @@
-name: udd
+# =============================================================================
+# File        : molt.yml
+# Author      : yukimemi
+# Last Change : 2024/07/06 21:31:40.
+# =============================================================================
+
+name: molt
 
 on:
   workflow_dispatch:
@@ -12,8 +18,6 @@ jobs:
   update:
     permissions: write-all
     runs-on: ubuntu-latest
-    env:
-      GEMINI_API_KEY: "${{ secrets.GEMINI_API_KEY }}"
 
     steps:
       - name: Generate app token
@@ -36,14 +40,14 @@ jobs:
         with:
           deno-version: v1.x
 
-      - name: Update dependencies with udd
-        id: run-deno-udd
+      - name: Update dependencies with molt
+        id: run-deno-molt
         env:
           NO_COLOR: true
         run: |
           {
-            echo 'UDD_RESULT<<EOF'
-            deno run --allow-all https://deno.land/x/udd/main.ts $(find . -type f | grep -E ".*\.([mc]?(ts|js)|(ts|js)x?)$" -)
+            echo 'MOLT_RESULT<<EOF'
+            deno task update:write
             echo EOF
           } >> $GITHUB_OUTPUT
 
@@ -61,11 +65,11 @@ jobs:
             <details><summary>Details</summary><div>
 
             ```
-            ${{ steps.run-deno-udd.outputs.UDD_RESULT }}
+            ${{ steps.run-deno-molt.outputs.MOLT_RESULT }}
             ```
 
             </div></details>
-          branch: udd-update
+          branch: molt-update
           labels: automerge
           author: GitHub <noreply@github.com>
           delete-branch: true
