--- a/deno.json
+++ b/deno.json
@@ -1,13 +1,13 @@
 {
   "tasks": {
-    "test": "deno test --allow-env --allow-read --allow-net --allow-none",
-    "cov": "deno task test --coverage=cov_profile; deno coverage cov_profile",
-    "lint": "deno lint --ignore=cov_profile",
-    "fmt": "deno fmt --ignore=cov_profile",
     "check": "deno check ./**/*.ts",
+    "fmt": "deno fmt",
+    "lint": "deno lint",
+    "test": "deno test -A --unstable-kv",
     "ci": "deno task check && deno task lint && deno task fmt --check && deno task test",
-    "update": "deno run --allow-env --allow-read --allow-write --allow-run --allow-net jsr:@molt/cli ./**/*.ts",
-    "update:commit": "deno task -q update --commit --prefix 'chore:' --pre-commit=fmt,lint"
+    "hooks:install": "deno run --allow-read=deno.json,.git/hooks/ --allow-write=.git/hooks/ jsr:@hongminhee/deno-task-hooks",
+    "hooks:pre-commit": "deno task ci",
+    "hooks:pre-push": "deno task ci"
   },
   "fmt": {
     "useTabs": false,
@@ -19,5 +19,8 @@
   "lint": {
     "include": ["denops"]
   },
-  "lock": false
+  "lock": false,
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.2"
+  }
 }
