Fix(ci): Add GEMINI_API_KEY secret to automerge and molt jobs
This commit adds the `GEMINI_API_KEY` secret to the `automerge` and `molt` jobs.

This allows the jobs to access the Gemini API, which is required for the tests to run.

--- a/.github/workflows/molt.yml
+++ b/.github/workflows/molt.yml
@@ -1,7 +1,7 @@
 # =============================================================================
 # File        : molt.yml
 # Author      : yukimemi
-# Last Change : 2024/09/21 15:46:08.
+# Last Change : 2024/11/03 01:51:10.
 # =============================================================================
 
 name: molt
@@ -34,6 +34,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v1
       - run: deno task ci
+        env:
+          GEMINI_API_KEY: "${{ secrets.GEMINI_API_KEY }}"
       - uses: hasundue/molt-action@v1.0.2
         with:
           labels: automerge
