--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,7 +1,7 @@
 # =============================================================================
 # File        : automerge.yml
 # Author      : yukimemi
-# Last Change : 2024/08/11 22:55:19.
+# Last Change : 2024/11/03 01:51:17.
 # =============================================================================
 
 name: automerge
@@ -20,6 +20,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v1
       - run: deno task ci
+        env:
+          GEMINI_API_KEY: "${{ secrets.GEMINI_API_KEY }}"
       - uses: "pascalgn/automerge-action@v0.16.3"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
